tdf#118412: DOC incorrect bottom page margin

Fix a silly typo when determining if the page has a bottom margin

Change-Id: I96857951725d00978c43d850d0e1bc64ab61d965
Reviewed-on: https://gerrit.libreoffice.org/56602
Tested-by: Jenkins
Reviewed-by: Luke Deller <luke@deller.id.au>
(cherry picked from commit 9f331575ad8d371c95a18e33a245d404e873ca8a)
Reviewed-on: https://gerrit.libreoffice.org/57055
Tested-by: Xisco Faulí <xiscofauli@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>